<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/building_list_frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
     android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/building_tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BuildingListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/building_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-7dp"
            android:layout_marginBottom="50dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/statusBarColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buildings_search_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAddBuilding" />

            <Button
                android:id="@+id/btnImportCSV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Import"
                app:layout_constraintEnd_toStartOf="@+id/btnAddBuilding"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnAddBuilding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Add"
                app:layout_constraintEnd_toStartOf="@+id/buildings_search_button"
                app:layout_constraintStart_toEndOf="@+id/btnImportCSV"
                tools:layout_editor_absoluteY="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>